Fixing overlapping anchor headings

--- a/lib-docs/sass/pages/docs/index.sass
+++ b/lib-docs/sass/pages/docs/index.sass
@@ -19,6 +19,8 @@ h3, h4, h5, h6
 .docs-nav
   +navbar($collapse: true, $layout: 'fluid', $background-color: map-get($colors, blue))
   margin-top: -$space
+  position: relative
+  z-index: 10
 
   @media screen and (min-height: $phablet)
     // Notice this is min-height, not min-width
@@ -31,7 +33,6 @@ h3, h4, h5, h6
       margin-top: 0
       left: 0
       right: 0
-      z-index: 10
 
 .fixed-area
   margin-top: -$space
